--- a/FXExperienceTools/src/main/resources/styles/main_light.css
+++ b/FXExperienceTools/src/main/resources/styles/main_light.css
@@ -11,7 +11,7 @@ different terms and without source code for the larger work.
     /*-font-family: 'Roboto';*/
 }
 @font-face {
-    src: url('/fonts/Roboto-Light.ttf');
+    src: url('/font/Roboto-Light.ttf');
 
 }
 
