--- a/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLSplinePanel.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -22,50 +22,55 @@
 
 <fx:root id="SplineEditor" prefHeight="600.0" stylesheets="@../styles/spline.css" type="BorderPane" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <GridPane id="Background" fx:id="gridPane" prefWidth="700.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints prefHeight="30.0" vgrow="ALWAYS" />
-            <RowConstraints vgrow="NEVER" />
-            <RowConstraints prefHeight="25.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="90.0" vgrow="ALWAYS" />
-            <RowConstraints prefHeight="25.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="130.0" vgrow="ALWAYS" />
-            <RowConstraints prefHeight="40.0" vgrow="ALWAYS" />
-            <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="ALWAYS" />
-          <RowConstraints vgrow="NEVER" />
-          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="ALWAYS" />
-          <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" vgrow="NEVER" />
-        </rowConstraints>
+      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER" spacing="5.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+            <GridPane fx:id="gridPane" prefWidth="700.0" styleClass="spline-grid-pane" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints prefHeight="30.0" vgrow="ALWAYS" />
+                  <RowConstraints vgrow="NEVER" />
+                  <RowConstraints prefHeight="25.0" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="90.0" vgrow="ALWAYS" />
+                  <RowConstraints prefHeight="25.0" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="130.0" vgrow="ALWAYS" />
+                  <RowConstraints prefHeight="40.0" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" vgrow="ALWAYS" />
+                <RowConstraints vgrow="NEVER" />
+                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" vgrow="ALWAYS" />
+                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="35.0" vgrow="NEVER" />
+              </rowConstraints>
                <children>
-                  <Pane minWidth="-Infinity" prefHeight="55.0" prefWidth="25.0" />
-                  <TextField fx:id="codeTextField" alignment="CENTER" prefHeight="55.0" styleClass="code-text" text="Text" HBox.hgrow="ALWAYS">
-                     <effect>
-                        <ColorAdjust brightness="-0.27" hue="-0.12" saturation="-0.17" />
-                     </effect></TextField>
-                  <Pane layoutX="10.0" layoutY="10.0" minWidth="-Infinity" prefHeight="55.0" prefWidth="5.0" />
+                  <HBox alignment="CENTER" spacing="5.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="10" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                     <children>
+                        <Pane minWidth="-Infinity" prefHeight="55.0" prefWidth="25.0" />
+                        <TextField fx:id="codeTextField" alignment="CENTER" prefHeight="55.0" styleClass="code-text" text="Text" HBox.hgrow="ALWAYS">
+                           <effect>
+                              <DropShadow color="#3c030f" height="5.0" radius="2.0" spread="0.12" width="5.0" />
+                           </effect>
+                        </TextField>
+                        <Pane layoutX="10.0" layoutY="10.0" minWidth="-Infinity" prefHeight="55.0" prefWidth="5.0" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </GridPane>
          </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="36.0" />
-         </padding>
-      </GridPane>
+      </AnchorPane>
    </center>
    <right>
       <AnchorPane minWidth="-Infinity" prefWidth="250.0" BorderPane.alignment="CENTER">
          <children>
-            <GridPane id="Animation-preview" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <GridPane id="Animation-preview" alignment="CENTER_RIGHT" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
               <columnConstraints>
                 <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="200.0" />
                   <ColumnConstraints />
               </columnConstraints>
               <rowConstraints>
-                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="5.0" valignment="CENTER" vgrow="ALWAYS" />
+                  <RowConstraints maxHeight="1.7976931348623157E308" minHeight="1.0" valignment="CENTER" vgrow="ALWAYS" />
                 <RowConstraints maxHeight="1.7976931348623157E308" valignment="CENTER" vgrow="ALWAYS" />
                 <RowConstraints maxHeight="1.7976931348623157E308" vgrow="ALWAYS" />
                   <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="139.0" vgrow="ALWAYS" />
@@ -116,7 +121,7 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox alignment="CENTER" spacing="5.0" style="-fx-background-color: transparent;" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
+                  <VBox alignment="CENTER" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                      <children>
                         <Label alignment="BOTTOM_CENTER" prefHeight="0.0" styleClass="animation-label" text="Fade" VBox.vgrow="ALWAYS" />
                         <Rectangle fx:id="fadeSquare" arcHeight="5.0" arcWidth="5.0" height="115.0" stroke="#65655fab" strokeType="INSIDE" strokeWidth="3.0" width="140.0" VBox.vgrow="ALWAYS">
