--- a/FXExperienceTools/src/main/resources/styles/spline.css
+++ b/FXExperienceTools/src/main/resources/styles/spline.css
@@ -18,7 +18,6 @@ different terms and without source code for the larger work.
     -fe-body-text: #BBB;
     -fe-inner-text: #FFF;
     /*-font-family: 'Roboto';*/
-    -fx-background-color: #2c2f33;
     -fx-focus-color: #339797;
     -dark-header: #23272a;
     -gray-darker: #2c2f33;
@@ -33,7 +32,16 @@ different terms and without source code for the larger work.
 
 #SplineEditor {
     -fx-background-image: url("../images/bg.png");
+    -fx-background-color: #333;
     /*-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 80, 0.0 , 0 , 0 );*/
+}
+.spline-grid-pane {
+    -fx-background-color: rgba(24, 24, 24, .8);
+    -fx-background-radius: 15px;
+}
+#Animation-preview {
+    -fx-background-color: rgba(24, 24, 24, .8);
+    -fx-background-radius: 15px;
 }
 
 .label {
@@ -41,9 +49,8 @@ different terms and without source code for the larger work.
     -fx-underline: true;
 }
 
-
 .animation-label {
-    -fx-font-family: "Noto Sans";
+    -fx-font-family: "Roboto";
     /*-fx-font-style: "Medium";*/
     -fx-font-size: 1.25em;
     -fx-text-fill: derive(#FFF, -10%);
@@ -54,11 +61,9 @@ different terms and without source code for the larger work.
     -fx-font-family: "Monospaced";
     -fx-font-size: 18px;
     -fx-text-fill: #BCBCBC;
-    /*-fx-background-image: url("../images/navbg.png");*/
     -fx-background-radius: 5px;
     -fx-background-color: linear-gradient(from 100.0% 1.0% to 100.0% 100.0% ,
         #804b4b 0.0% , #804b4b 1.0% , #694848 20.0% , #4d2121 84.0% , #4d2121 100.0% );
-    /*-fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.4) , 5, 0.0 , 0 , 5 );*/
 }
 
 .chart-plot-background {
