--- a/FXExperienceTools/src/main/resources/styles/style_panel_dark.css
+++ b/FXExperienceTools/src/main/resources/styles/style_panel_dark.css
@@ -41,17 +41,17 @@
 }
 
 .button-hbox {
-    -fx-background-color: derive(-fe-inner-background,-30%),
-        linear-gradient(to bottom,
-            derive(-fe-inner-background,-3%),
-            derive(-fe-inner-background, 0%) 50%,
-            derive(-fe-inner-background,-3%));
-    -fx-background-radius: 3, 1, 2;
+    -fx-background-color: linear-gradient(from 100.0% 0.0% to 100.0% 99.0% , #606c57 0.0% , #606c57 1.0% , #732929 43.0% , #702a2a 82.0% , #723232 100.0% );
+        /*linear-gradient(to bottom,*/
+            /*derive(-fe-inner-background,-3%),*/
+            /*derive(-fe-inner-background, 0%) 50%,*/
+            /*derive(-fe-inner-background,-3%));*/
+    -fx-background-radius: 1, 2, 3, 2;
 }
-.style-button {
-    -fx-background-color: -fe-shadow-highlight-color, -fe-inner-border, -fe-inner-border, -fe-body-color;
+/*.style-button {*/
+    /*-fx-background-color: -fe-shadow-highlight-color, -fe-inner-border, -fe-inner-border, -fe-body-color;*/
 
-}
+/*}*/
 
 .font-radio-button {
     -fx-text-fill: -fe-inner-text;
@@ -73,7 +73,7 @@
 .style-button {
     -fx-font-size: .825em;
     -fx-background-color: transparent;
-    -fx-border-color: #5c5c5c;
+    -fx-border-color: lightgrey;
     -fx-pref-width: 35px;
     -fx-pref-height: 35px;
     -fx-border-radius: 5;
@@ -81,8 +81,8 @@
 }
 
 .style-button:focused {
-    -fx-background-color: -fe-focus-background;
-    -fx-border-color: #5c5c5c;
+    /*-fx-background-color: -fe-focus-background;*/
+    -fx-border-color: lightseagreen;
     -fx-max-width: 35px;
     -fx-max-height: 35px;
     -fx-text-fill: #E7E7E7;
