--- a/FXExperienceTools/src/main/resources/styles/main_dark.css
+++ b/FXExperienceTools/src/main/resources/styles/main_dark.css
@@ -45,7 +45,7 @@ different terms and without source code for the larger work.
     /*-fx-background-insets: 1, -5, 1, -5;*/
     /*-fx-background-radius: 9;*/
 }
-#Main-Panel {
+.root-controller-panel {
     -fx-background-image: url("../images/bg.png")
 }
 
@@ -63,7 +63,8 @@ different terms and without source code for the larger work.
 .main-menu {
     /*    -fx-background-color:  derive(rgb(147, 147, 147), -60%);*/
     /*-fx-background-color: derive(-dark-header, 0%), derive(-dark-header, 25%),  derive(-dark-header, -20%),  -dark-header;*/
--fx-background-color: derive(#23272a, -18%);
+-fx-background-color: linear-gradient(from 100.0% 0.0% to 100.0% 99.0% , #606c57 0.0% , #606c57 1.0% , #732929 43.0% , #702a2a 82.0% , #723232 100.0% );
+    /*linear-gradient(to bottom,*/
     -fx-padding: 0.0em 0.666667em 0.0em 0.666667em; /* 0 8 0 8 */
     /*-fx-effect: dropshadow( two-pass-box, -gray-light, 2, 0.0, 0, 1 );*/
     -fx-background-insets: 0 0 0 0, 0 1 0 1;
