--- a/FXExperienceTools/src/main/resources/fxml/FXMLMainPanel.fxml
+++ b/FXExperienceTools/src/main/resources/fxml/FXMLMainPanel.fxml
@@ -3,14 +3,12 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.shape.ClosePath?>
-<?import javafx.scene.shape.LineTo?>
-<?import javafx.scene.shape.MoveTo?>
-<?import javafx.scene.shape.Path?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="rootBorderPane" minHeight="-Infinity" prefHeight="760.0" styleClass="root-controller-panel" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
@@ -26,61 +24,57 @@
    <top>
       <AnchorPane maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="60.0" style="-fx-background-color: #0092c1;" BorderPane.alignment="CENTER">
          <children>
-            <StackPane fx:id="toolBar" alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="1080.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <StackPane alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="60.0" prefWidth="1080.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="54.0" spacing="24.0" styleClass="main-menu">
                      <children>
-                        <ToggleButton fx:id="styleToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#styleToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="CSS Style Builder" textAlignment="CENTER" wrapText="true">
+                        <ToggleButton fx:id="styleToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#styleToggleAction" prefHeight="52.0" prefWidth="150.0" selected="true" styleClass="menu-toggle-button" text="CSS Style Builder" textAlignment="CENTER" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                            <graphic>
-                              <FontAwesomeIconView fill="#cdcdcd" glyphName="PENCIL_SQUARE_ALT" size="42px" />
+                              <FontAwesomeIconView glyphName="PENCIL_SQUARE_ALT" size="42px" styleClass="font-awesome-menu-icon" />
                            </graphic>
+                           <toggleGroup>
+                              <ToggleGroup fx:id="menuToggleGroup" />
+                           </toggleGroup>
                         </ToggleButton>
-                        <ToggleButton fx:id="splineToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#splineToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Animation Tool" textAlignment="CENTER" wrapText="true">
+                        <ToggleButton fx:id="splineToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#splineToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Animation Tool" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                            <graphic>
-                              <FontAwesomeIconView fill="#aeaeae" glyphName="LINE_CHART" size="40px" />
+                              <FontAwesomeIconView fill="#aeaeae" glyphName="LINE_CHART" size="40px" styleClass="font-awesome-menu-icon" />
                            </graphic>
                         </ToggleButton>
-                        <ToggleButton fx:id="derivedColorToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#derivedToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Derivation Tool" textAlignment="CENTER" wrapText="true">
+                        <ToggleButton fx:id="derivedColorToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#derivedToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Derivation Tool" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                            <graphic>
-                              <FontAwesomeIconView fill="#b2b2b2" glyphName="EXCHANGE" size="40px" />
+                              <FontAwesomeIconView fill="#b2b2b2" glyphName="EXCHANGE" size="40px" styleClass="font-awesome-menu-icon" />
                            </graphic>
                         </ToggleButton>
-                        <ToggleButton fx:id="gradientBuilderToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gradientToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Gradient Builder" textAlignment="CENTER" wrapText="true">
+                        <ToggleButton fx:id="gradientBuilderToggle" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gradientToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Gradient Builder" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <font>
                               <Font size="11.0" />
                            </font>
                            <graphic>
-                              <FontAwesomeIconView fill="#b2b2b2" glyphName="PAINT_BRUSH" size="40px" />
+                              <FontAwesomeIconView fill="#b2b2b2" glyphName="PAINT_BRUSH" size="40px" styleClass="font-awesome-menu-icon" />
                            </graphic>
                         </ToggleButton>
-                        <ToggleButton fx:id="animationToggle" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#animationToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Controls Demo" textAlignment="CENTER" wrapText="true">
+                        <ToggleButton fx:id="animationToggle" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#animationToggleAction" prefHeight="52.0" prefWidth="150.0" styleClass="menu-toggle-button" text="Controls Demo" textAlignment="CENTER" toggleGroup="$menuToggleGroup" wrapText="true">
                            <graphic>
-                              <FontAwesomeIconView fill="#b2b2b2" glyphName="PLAY_CIRCLE" size="42px" />
+                              <FontAwesomeIconView fill="#b2b2b2" glyphName="PLAY_CIRCLE" size="42px" styleClass="font-awesome-menu-icon" />
                            </graphic>
                         </ToggleButton>
                      </children>
                   </HBox>
                </children>
             </StackPane>
-            <StackPane fx:id="arrowPane" layoutX="97.0" layoutY="15.0" maxHeight="-Infinity" prefHeight="30.0" style="-fx-background-color: transparent;">
+            <StackPane fx:id="selectedIconBullet" layoutX="97.0" layoutY="15.0" maxHeight="-Infinity" prefHeight="30.0" style="-fx-background-color: transparent;">
                <children>
-                  <Path fill="#d280ff" stroke="#4a4a4a00" strokeType="INSIDE">
-                     <elements>
-                        <MoveTo y="22.0" />
-                        <LineTo x="16.0" y="30.0" />
-                        <LineTo y="38.0" />
-                        <ClosePath />
-                     </elements>
-                  </Path>
+                  <Circle fill="WHITE" radius="5.0" stroke="TRANSPARENT" strokeType="INSIDE" />
                </children>
             </StackPane>
          </children>
